syntax = "proto3";

option go_package = "pb/game";

import "proto/common/empty.proto";
import "proto/common/session.proto";
import "proto/common/tip.proto";
import "proto/common/user_accounts.proto";

package loginpb;

message AccountSimplePlayerWrapper
{
  AccountSimplePlayer player = 1;
}

message LoginRequest
{
  string account = 1;
  string password = 2;
}

message LoginResponse
{
  TipInfoMessage error_message = 1;
  repeated AccountSimplePlayerWrapper players = 2;
}

message TestResponse
{
  TipInfoMessage error_message = 1;
  repeated AccountSimplePlayerWrapper players = 2;
  repeated string teststring = 3;
  repeated int32 testint = 4;
}

message CreatePlayerRequest
{
	
}

message CreatePlayerResponse
{
	TipInfoMessage error_message = 1;
	repeated AccountSimplePlayerWrapper players = 2;
}

message EnterGameRequest
{
	uint64 player_id  = 1;
}

message EnterGameResponse
{
	TipInfoMessage error_message = 1;
	uint64 player_id  = 2;
}

message LeaveGameRequest
{
}

message LoginNodeDisconnectRequest
{
  uint64 session_id = 1;
}

service ClientPlayerLogin  {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc CreatePlayer (CreatePlayerRequest) returns (CreatePlayerResponse);
  rpc EnterGame (EnterGameRequest) returns (EnterGameResponse);
  rpc LeaveGame (LeaveGameRequest) returns (Empty);
  rpc Disconnect (LoginNodeDisconnectRequest) returns (Empty);
}
